# Open-Targets-Fantasy-Map

OTAR_mapping/: README.md  pyproject.toml
OTAR_mapping/agent_files/: plan.md  specs.md  tasks.md
OTAR_mapping/outputs/: open_targets_diseases_1_in_50.map
OTAR_mapping/src/ot_fmg/: __init__.py  azgaar.py  cli.py  config.py  converter.py  ontology.py  tables.py
OTAR_mapping/tests/: test_build_validate.py  test_ontology.py
src/renderers/: webgl-burg-icons.ts  webgl-burg-labels.ts
